# alejandria

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 21e83df6ddb0_baseline_v0_1.py  3c5739e09be5_add_highlight_note_and_color_hex.py
backend/src/alejandria/: __init__.py  __main__.py  config.py  db.py  main.py
backend/src/alejandria/auth/: __init__.py  csrf.py  dependencies.py  oidc.py  rate_limit.py  security.py
backend/src/alejandria/middleware/: security_headers.py
backend/src/alejandria/models/: __init__.py  annotation.py  highlight.py  oidc_state.py  progress.py  scrape_job.py  session.py  shelf.py  user.py
backend/src/alejandria/routers/: auth.py  books.py  bulk.py  conversion.py  health.py  highlights.py  kindle.py  library.py  opds.py  reader.py  scraper.py  security.py  settings.py  shelves.py  stats.py
backend/src/alejandria/schemas/: __init__.py  auth.py  book.py  filters.py  highlight.py  progress.py  scraper.py  shelf.py
backend/src/alejandria/services/: calibre_db.py  conversion_cache.py  convert.py  cover.py  highlights.py  scanner.py  smtp.py  stats.py
backend/src/alejandria/services/scraper/: __init__.py  image_fetch.py  manager.py  rate_limit.py  ssrf.py
backend/src/alejandria/services/scraper/adapters/: __init__.py  base.py  generic.py  loader.py
backend/src/alejandria/services/scraper/packagers/: __init__.py  cbz.py  epub.py  pdf.py
backend/src/alejandria/utils/: bootstrap.py  log.py  paths.py
backend/tests/: conftest.py  test_auth.py  test_bulk_operations.py  test_calibre_db.py  test_highlights_complete.py  test_library_filters.py  test_perf_concurrency.py  test_perf_cover_cache.py  test_perf_cover_memory.py  test_perf_http_cache.py  test_perf_list_books.py  test_perf_shelves_batch.py  test_phase_b_convert.py  test_phase_b_db.py  test_phase_b_health.py  test_phase_b_oidc.py  test_phase_b_scanner.py  test_scraper_adapters.py  test_scraper_image_fetch.py  test_scraper_manager.py  test_scraper_packagers.py  test_scraper_rate_limit.py  test_scraper_routes.py  test_scraper_ssrf.py  test_security.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.sh
docs/: ARCHITECTURE.md  BACKUP.md  CONFIGURATION.md  CONTRIBUTING.md  OPDS.md  SCRAPER.md
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: backup.sh  check-docker.ps1  dev.sh  restore.sh  test_compose_hardening.py
(+60 files in other folders)
