[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alejandria"
version = "0.1.0"
description = "Self-hosted ebook library web app"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Alejandría contributors"}
]
keywords = ["ebook", "library", "calibre", "self-hosted", "opds", "epub", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Text Processing :: Markup :: HTML"
]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",

    # Auth
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.0",
    "authlib>=1.3.2",
    "httpx>=0.27.2",

    # File & media
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "python-magic>=0.4.27",
    "pillow>=11.0.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "mobi>=0.3.3",
    "pypdf>=5.1.0",
    "pymupdf>=1.24.13",
    "watchdog>=4.0.0",
    "playwright>=1.48",
    "img2pdf>=0.5",

    # Email
    "aiosmtplib>=3.0.1",
    "email-validator>=2.2.0",

    # Utilities
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "typer>=0.13.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "watchfiles>=0.24.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
    "freezegun>=1.5.1",
]

[project.scripts]
alejandria = "alejandria.__main__:main"
alejandria-cli = "alejandria.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alejandria"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["E501", "S101", "B008", "B904", "PT011"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "B011"]
"src/alejandria/__main__.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
